--- a/R6NEWS/package.json
+++ b/R6NEWS/package.json
@@ -12,7 +12,9 @@
     "@react-navigation/bottom-tabs": "^7.8.7",
     "@react-navigation/native": "^7.1.22",
     "@react-navigation/native-stack": "^7.8.1",
+    "@react-navigation/stack": "^7.6.8",
     "expo": "~54.0.25",
+    "expo-sqlite": "~16.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -21,7 +23,8 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "^0.21.0"
+    "react-native-web": "^0.21.0",
+    "sqlite": "^5.1.1"
   },
   "private": true
 }
