--- a/R6NEWS/package.json
+++ b/R6NEWS/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/native-stack": "^7.8.1",
     "@react-navigation/stack": "^7.6.8",
     "expo": "~54.0.25",
-    "expo-sqlite": "~16.0.9",
+    "expo-sqlite": "^16.0.9",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-dom": "19.1.0",
